unpackaged/main/default/objects/Account/fields/Months_Without_Activity__c.field-meta.xml
<CustomField>
    <fullName>Months_Without_Activity__c</fullName>
    <formula>ROUND((YEAR(LastActivityDate) - YEAR(TODAY())) * 12 + MONTH(LastActivityDate) - MONTH(TODAY()) + IF(DAY(LastActivityDate) &gt;= DAY(TODAY()), 1, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Without Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>