unpackaged/main/default/objects/Account/fields/MSA_Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>MSA_Non_Standard_Terms__c</fullName>
    <label>MSA/Non-Standard Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>