unpackaged/main/default/objects/Account/fields/NPS_Average__c.field-meta.xml
<CustomField>
    <fullName>NPS_Average__c</fullName>
    <label>NPS Average</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>