unpackaged/main/default/objects/Account/validationRules/Approved_Customer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Customer_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Type, "Approved Customer") &amp;&amp;  ISNULL( Credit_Review_Date__c ) &amp;&amp;  ISNULL( Credit_Limit__c ) &amp;&amp;   ISPICKVAL(MSA_Non_Standard_Terms__c, "")    , true, false)</errorConditionFormula>
    <errorMessage>To be marked as an Approved Customer the Credit Review Date, Credit Limit, MSA/Non-Standard Terms fields are required.</errorMessage>
</ValidationRule>