unpackaged/main/default/objects/Account/validationRules/Credit_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Type, "Approved Customer") &amp;&amp; ISNULL( Credit_Limit__c ), true, false)</errorConditionFormula>
    <errorDisplayField>Credit_Limit__c</errorDisplayField>
    <errorMessage>To be marked as an Approved Customer the Credit Limit is required.</errorMessage>
</ValidationRule>