unpackaged/main/default/objects/Account/validationRules/Credit_Review_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Review_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Type, "Approved Customer") &amp;&amp;  ISNULL( Credit_Review_Date__c ), true, false)</errorConditionFormula>
    <errorDisplayField>Credit_Review_Date__c</errorDisplayField>
    <errorMessage>To be marked as an Approved Customer the Credit Review Date is required.</errorMessage>
</ValidationRule>