unpackaged/main/default/objects/Account/validationRules/MSA_Non_Standard_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>MSA_Non_Standard_Terms</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Type, "Approved Customer")&amp;&amp;   ISPICKVAL(MSA_Non_Standard_Terms__c, "")    , true, false)</errorConditionFormula>
    <errorDisplayField>MSA_Non_Standard_Terms__c</errorDisplayField>
    <errorMessage>To be marked as an Approved Customer the MSA/Non-Standard Terms field is required.</errorMessage>
</ValidationRule>